objects/Billing_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Profiles</relationshipLabel>
        <relationshipName>Billing_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Id</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Billing Profiles</relationshipLabel>
        <relationshipName>Billing_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <description>For US it&apos;s Routing Number and for UK it&apos;s Sort Code</description>
        <label>Bank Routing Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Card_Type__c</fullName>
        <formula>CASE(  TEXT(Credit_Card_Type__c)  , 
&apos;American Express&apos;, &apos;1&apos;, 
&apos;Discover&apos;,&apos;2&apos;,
&apos;Master Card&apos;,&apos;3&apos;,
&apos;Visa&apos;,&apos;4&apos;,
&apos;Diners Club&apos;,&apos;5&apos;,
&apos;JCB&apos;,&apos;6&apos;,
&apos;EnRoute&apos;,&apos;7&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Card Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Payment_Type__c</fullName>
        <formula>CASE(TEXT(Payment_Method__c),
&apos;NO PAYMENT&apos;,&apos;NO_PAYMENT&apos;,
&apos;CREDIT CARD&apos;,&apos;CREDIT_CARD&apos;,
&apos;DIRECT DEBIT&apos;,&apos;DIRECT_DEBIT&apos;,
&apos;DEBIT CARD&apos;,&apos;DIRECT_DEBIT&apos;,
&apos;OTHER PAYMENT&apos;,&apos;OTHER_PAYMENT&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Approval_Code__c</fullName>
        <label>Credit Card Approval Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiry_Date__c</fullName>
        <label>Credit Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Verification_Number__c</fullName>
        <description>This is a 3-Digit code on the back of the Credit Card</description>
        <label>Credit Card Verification Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Month__c</fullName>
        <inlineHelpText>Credit Card Expiry Month</inlineHelpText>
        <label>Expiry Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Year__c</fullName>
        <label>Expiry Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Credit_Card__c</fullName>
        <label>Name of Credit Card</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>